# Summer-Project-2025

./: .gitignore
Assembly_Stuff/AVR/Blinky/: blinky.s  constants.inc
Assembly_Stuff/AVR/Button/: button.s  constants.inc
Assembly_Stuff/AVR/PWM/: constants.inc  pwm.elf  pwm.hex  pwm.s
Assembly_Stuff/Greet/: gdb.txt  greet  greet.asm
Assembly_Stuff/Initial_Test/: hello  hello.asm
Network-Stuff/React-Learning/app-test/: package-lock.json  package.json
Network-Stuff/React-Learning/input-test/: package-lock.json  package.json
Network-Stuff/Server-Client-Basic/: Client.cpp  Server.cpp
Network-Stuff/Server-Client-JSON/: Client.cpp  Server.cpp
Network-Stuff/Server-Client-Threaded/: CMakeLists.txt
Network-Stuff/Server-Client-Threaded/includes/: ClientHandler.h  ClientProgram.h
Network-Stuff/Server-Client-Threaded/src/: Client.cpp  ClientHandler.cpp  ClientProgram.cpp  Server.cpp
esp-stuff/bare-project-test/: .cproject  CMakeLists.txt
esp-stuff/bare-project-test/main/: CMakeLists.txt  bare_project_test_main.c
esp-stuff/blinky-task/: CMakeLists.txt
esp-stuff/blinky-task/main/: CMakeLists.txt  blinky_task_main.c
esp-stuff/blinky/main/: CMakeLists.txt  blinky_main.c
gui-stuff/examples/basic-gui/: CMakeLists.txt  basic_gui.c
gui-stuff/examples/example-0/: CMakeLists.txt  example0.c  example_0
gui-stuff/examples/example-1/: CMakeLists.txt  example1.c  example_1
gui-stuff/examples/example-2/: CMakeLists.txt  example_2
json-stuff/json-library-test/: JsonTest.cpp
prototyping/esp-stm32-comms/blinky/STM32-Module/: .cproject  STM32-Module.ioc
(+61 files in other folders)
